[project]
name = "orion-trading-simulation"
version = "1.0.0"
description = "A multi-agent reinforcement learning environment simulating a stock trading market with difficulty levels"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
server = "uvicorn openenv.server.app:app --host 0.0.0.0 --port 8000"
